objects/DMAPP__Insight_Competitor__c.object
<CustomObject>
    <fields>
        <fullName>DMAPP__DealmakerID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>Dealmaker ID</label>
        <length>40</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>DMAPP__Description__c</fullName>
        <inlineHelpText>Provide a brief description of the competitor.</inlineHelpText>
        <label>Description</label>
        <length>2048</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>DMAPP__Namespace__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Insight Namespace</label>
        <referenceTo>DMAPP__Insight_Namespace__c</referenceTo>
        <relationshipLabel>Competitors</relationshipLabel>
        <relationshipName>Competitors</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DMAPP__Opportunities__c</fullName>
        <label>Opportunities</label>
        <length>2048</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>DMAPP__Strengths__c</fullName>
        <inlineHelpText>Provide a summary of the competitor&apos;s strengths.</inlineHelpText>
        <label>Strengths</label>
        <length>2048</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>DMAPP__Threats__c</fullName>
        <label>Threats</label>
        <length>2048</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>DMAPP__Weaknesses__c</fullName>
        <inlineHelpText>Provide a summary of the competitor&apos;s weaknesses.</inlineHelpText>
        <label>Weaknesses</label>
        <length>2048</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>DMAPP__Website__c</fullName>
        <inlineHelpText>Provide a link to the competitor&apos;s website.</inlineHelpText>
        <label>Website</label>
        <type>Url</type>
    </fields>
    <label>Competitor</label>
    <listViews>
        <fullName>DMAPP__All</fullName>
        <columns>NAME</columns>
        <columns>DMAPP__Description__c</columns>
        <columns>DMAPP__Strengths__c</columns>
        <columns>DMAPP__Weaknesses__c</columns>
        <columns>DMAPP__Website__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Competitors</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>DMAPP__Prevent_Field_Update</fullName>
        <active>true</active>
        <description>Prevents users updating the Field</description>
        <errorConditionFormula>ISCHANGED(DMAPP__DealmakerID__c)</errorConditionFormula>
        <errorDisplayField>DMAPP__DealmakerID__c</errorDisplayField>
        <errorMessage>The Dealmaker ID field cannot be updated after creation</errorMessage>
    </validationRules>
</CustomObject>